manager/media/style/ClipperModern/style.css
/* -------------------------[ Neutralize styles, fonts and viewport ]--- */
html { /overflow-x: hidden; /overflow-y: auto;} /* for IE7, IE6 */
html, body, form, fieldset {
	margin: 0;
	padding: 0;
}
html {
	font-size: 100.01%;
	line-height: 1.5;
	font-family: Helvetica, Arial, sans-serif !important;
	font-family: Arial, Tahoma, Helvetica, sans-serif;
	color: #111;
}
body {
	font-size: 62.5%;
	font-size: 68.75%;
	font-size: 75%;
	height: 100%;
	color:#333333;
	background: #f7f7f7;
}
img, a img {
	border: 0 !important;
	text-decoration: none;
	padding: 0;
	margin: 0;
}
h1, h2, h3, h4, h5, h6, p, pre, blockquote, ul, ol, dl, address {
	margin: 0 0 .5em;
	padding: 0;
	font-weight: normal;
}
li, dd, blockquote {
	margin: 0 0  0 1em;
}
	.rtl li, .rtl dd, .rtl blockquote {
		margin: 0 1em 0 0;
	}


.file-manager td {
	border-bottom: 1px solid #d5dfea;
}
.ab2 {
	padding-bottom: 20px;
}
/* -------------------------[ Miscellaneous conveniences ]--- */
.clearfix, .cls {
	clear: both;
	height: 0 !important;
	margin: 0;
	font-size: 1px;
	overflow: hidden;
}
.clear {
	clear: both;
}
.fail {
	color: #900;
	font-weight: bold;
}
.warning {
	color: #444444;
	font-weight: bold;
	font-size:12px;
}
td .warning {	
}
li .warning {
	top: 0px;
}
.success {
	color: #090;
	font-weight: bold;
}
.contentPad {
	height: 20px !important;
	clear: both;
}
.hide, .skip, .printonly {
	display: none;
}
.inline {
	display: inline;
}
/* -------------------------[ Headers and Paragraphs ]--- */
h1, h2, h3, h4, h5, h6, .subTitle {
	font-weight: normal;
}
h1 {
	font-size: 218%;
	font-size: 164%;
	line-height: 40px;
	margin: 4px 0 3px 10px;
	letter-spacing:1px;
}
	.rtl h1 {
		margin-right: 10px;
	}
h2 {
	font-size: 164%;
}
h3 {
	font-size: 145%;
}
h4 {
	font-size: 118%;
}
h5 {
	font-size: 100%;
	font-weight: bold;
}
h6 {
	font-size: 86%;
	font-weight: bold;
}
p.caption, p.comment {
	font-size: 86%;
	color: #888;
}
button {
	color: #821517;
	font-weight: bold;
	width: 112px;
	margin: 0 5px 0 0;
	cursor: pointer;
}
	.rtl button {
		margin: 0 0 0 5px;
	}
a, a:active, a:visited, a:link {
	color: #1285A4;
	text-decoration: underline;
}
a:hover {
	color: #0f1e76;
}
hr {
	color: #777;
	background-color: #777;
	height: 1px;
	border: 0;
}
.split {
	background: #556476 url(images/misc/line.gif) repeat-x;
	height: 1px;
	font-size: 0;
	clear: both;
	padding: 0;
}
#previewIframe {
	width: 100%;
	height: 400px;
}
.messageRead {
	color: #333;
}
.messageUnread {
	color: #3CB371;
	font-weight: bold;
}
.right {
	font-weight: bold;
	color: #333;
	float: left;
	padding: 0 20px 20px;
}
	.rtl .right {
		float: right;
	}
#loadingmask {
	background: none !important;
}
/* -------------------------[ Topbar ]--- */
#topbar {
	position: relative;
	z-index: 4;
	margin: 0;
	color: #333;
	padding: 0 5px;
}
#topbar * {
	vertical-align: middle;
}
#topbar a,
#topbar a:link,
#topbar a:visited {
	color: #DDD;
	text-decoration: none;
}
#topbar a:hover {
	color: #FFF;
	text-shadow: 0 0 2px #FFF;
}
#tocText {
	position: absolute;
	left: 3px;
	top: 50px;
	z-index: 1000;
}
	.rtl #tocText {
		right: 3px;
	}
.tocTextRTL {
	right: 3px;
}
#tocText,
#buildText,
#workText {
	font-weight: bold;
	line-height: 16px;
	margin: 0 15px;
	color: #FFF;
}
#tocText,
#buildText img,
#workText img {
	margin: 0 5px;
}
#statusbar {
	position: absolute;
	right: 0;
	top: 20px;
}
	.rtl #statusbar { 
		left: 0; 
	}
#supplementalNav {
	float: right;
	background: transparent;
	font-size: 12px;
	padding: 0 0 30px;
	margin: 0;
	color: #DDD;
}
	.rtl #supplementalNav {
		float: left;
	}
#supplementalNav * {
	vertical-align: bottom;
}
#supplementalNav a {
	padding: 0;
	margin: 0;
}
#msgCounter, #newMail {
	margin: 0;
	padding: 0;
}

/* -------------------------[ Forms ]--- */
tbody, thead, tr {
	margin: 0;
	padding: 0;
	border: 0;
}
form label {
	cursor: pointer;
}
fieldset {
	border: none;
}
input, select, textarea, option, optgroup, td {
	font: inherit;
	color: inherit;
}
	.rtl input,
	.rtl select,
	.rtl textarea,
	.rtl td {
		text-align: right;
	}
#ta, .tmplvars textarea {
	font-size: 130%;
	font-family: monospace;
}
form input[type=text],
form textarea {
	color: #333;
	border: 1px solid #DDD;
	border-left-color: #CCC;
	border-top-color: #CCC;
	padding: 10px 8px;
	margin: 1px 0;
	background: #FFF url(images/misc/input-bg.jpg) repeat-x top left;
	vertical-align: baseline;
}
	.rtl form input[type=text],
	.rtl form textarea {
		padding: 2px 2px 2px 0;
	}
	
.sectionBody.tmplvars table input,
.sectionBody.tmplvars table textarea {
	padding-right: 0 !important;
}
.sectionBody.tmplvars table input[type="button"] {
	padding-right: 4px !important;
}

input.checkbox,
input.radio,
input.submit,
input.button,
input[type="checkbox"],
input[type="radio"],
input[type="submit"],
input[type="button"] {
	position: relative;
	top: -1px;
	height: auto !important;
	width: auto !important;
	vertical-align: middle;
	padding: 9px  4px 9px 4px!important;
	border: 1px solid #DDD;
	margin: 0 2px;
	background: #FFF url(images/misc/button-gradient.jpg) repeat-x center 5px;
	-webkit-box-shadow: 0 0 3px #DDD;
	-moz-box-shadow: 0 0 3px #DDD;
	box-shadow:  0 0 3px #DDD;
	cursor: pointer;
}
input[type="button"]:hover {
	background: #FFF url(images/misc/button-gradient.jpg) repeat-x bottom left;
	-webkit-box-shadow: 0 0 10px #b8c7d6;
	-moz-box-shadow: 0 0 10px #b8c7d6;
	box-shadow:  0 0 10px #b8c7d6;	
}
select {
	border: 1px solid;
	border-color: #CCCCCC #DDDDDD #DDDDDD #CCCCCC;
	background: #fcfcfc;
	padding: 10px 8px;
	margin: 1px 0;
	background: #FFF url(images/misc/input-bg.jpg) repeat-x top left;
	-webkit-border-radius: 2px;
	-moz-border-radius: 2px;
	border-radius: 2px;
	
}

input.checkbox,
input[type="checkbox"],
input.radio,
input[type="radio"] {
	padding: 0 !important;
	background-image: none !important;
	border: none !important;
	box-shadow: 0 0 0 #FFF !important;	
}	

.form {
	padding: 15px;
	border: solid 1px #ddd;
}
form input.hidden {
	display: none !important;
	position: absolute;
}
/* ... */

